--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "trinity",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
