--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "mongoose-autopopulate": "^0.12.2"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
