--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "trinity",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "mongoose-autopopulate": "^0.12.2"
